@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/OptionLists.txt,v 1.12 2005/11/15 16:10:51 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/OptionLists.txt,v 1.13 2005/12/06 10:25:59 ph10 Exp $
 
 LISTS OF EXIM OPTIONS
 ---------------------
@@ -158,8 +158,9 @@ delivery_date_remove                 boolean         true          main
 directory                            string*         unset         appendfile
 directory_mode                       octal-integer   0700          appendfile
 directory_transport                  string*         unset         redirect          4.00
+disable_ipv6                         boolean         false         main              4.61
 disable_logging                      boolean         false         routers           4.11
-disable_logging                      boolean         false         transports        4.11
+                                                     false         transports        4.11
 dns_again_means_nonexist             domain list     unset         main              1.89
 dns_check_names_pattern              string          +             main              2.11
 dns_csa_search_limit                 integer         5             main              4.60
